[metadata]
name = synapse_to_ipynb
version = 1.0.0
description = Tool for managing and converting Synapse notebooks to Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jordanamos/synapse-to-ipynb
author = Jordan Amos
author_email = jordan.amos@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = synapse, jupyter, convert, ipynb, synch, notebook, notebooks

[options]
py_modules = synapse_to_ipynb
python_requires = >=3.10

[options.entry_points]
console_scripts =
    synapse-to-ipynb = synapse_to_ipynb:main

[flake8]
max-line-length = 88
exclude = testing/*

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
ignore_errors = True

[mypy-tests.*]
ignore_errors = True
